fixed padding issue with flex wrap

--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ h4 {
   font-size: 14px;
   line-height: 24px;
   font-family: "Assistant", sans-serif;
-  padding: 20px 50px 20px 0;
+  padding: 20px 20px 20px 0;
   width: 250px;
   height: 350px;
   float: left;
